fix callout gap (#2695)

--- a/packages/scss/src/components/callout/mods.scss
+++ b/packages/scss/src/components/callout/mods.scss
@@ -1,7 +1,7 @@
 @use '@lucca-front/icons/src/icon/exports' as icon;
 
 @mixin S {
-	--components-callout-gap: var(--pr-t-spacings-150);
+	--components-callout-gap: var(--pr-t-spacings-100);
 	--components-callout-fontSize: var(--sizes-S-fontSize);
 	--components-callout-lineHeight: var(--sizes-S-lineHeight);
 
